Update 20210807 광주 광역시 건축 데이터 전처리2.ipynb

--- a/Python_code/20210807 광주 광역시 건축 데이터 전처리2.ipynb
+++ b/Python_code/20210807 광주 광역시 건축 데이터 전처리2.ipynb
@@ -61,9 +61,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** process 1 ***\n",
+      "*** \"time : 0.605931282043457 process 1 fin ***\n",
+      "*** process 2 ***\n",
+      "*** \"time : 179.69236135482788 process 2 fin ***\n",
+      "*** process 3 ***\n",
+      "*** \"time : 179.8794047832489 process 3 fin ***\n",
+      "*** process 4 ***\n",
+      "*** \"time : 184.9616174697876 process 4 fin ***\n",
+      "*** process 5 ***\n",
+      "*** \"time : 196.33780241012573 process 5 fin ***\n",
+      "*** process 6 ***\n",
+      "*** \"time : 218.6408727169037 process 6 fin ***\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import time\n",
