Update 20210807 광주 광역시 건축 데이터 전처리2.ipynb

--- a/Python_code/20210807 광주 광역시 건축 데이터 전처리2.ipynb
+++ b/Python_code/20210807 광주 광역시 건축 데이터 전처리2.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -69,17 +69,17 @@
      "output_type": "stream",
      "text": [
       "*** process 1 ***\n",
-      "*** \"time : 0.605931282043457 process 1 fin ***\n",
+      "*** \"time : 0.6086559295654297 process 1 fin ***\n",
       "*** process 2 ***\n",
-      "*** \"time : 179.69236135482788 process 2 fin ***\n",
+      "*** \"time : 168.9586262702942 process 2 fin ***\n",
       "*** process 3 ***\n",
-      "*** \"time : 179.8794047832489 process 3 fin ***\n",
+      "*** \"time : 169.1366662979126 process 3 fin ***\n",
       "*** process 4 ***\n",
-      "*** \"time : 184.9616174697876 process 4 fin ***\n",
+      "*** \"time : 174.1899962425232 process 4 fin ***\n",
       "*** process 5 ***\n",
-      "*** \"time : 196.33780241012573 process 5 fin ***\n",
+      "*** \"time : 185.43360590934753 process 5 fin ***\n",
       "*** process 6 ***\n",
-      "*** \"time : 218.6408727169037 process 6 fin ***\n"
+      "*** \"time : 186.55620622634888 process 6 fin ***\n"
      ]
     }
    ],
@@ -300,7 +300,7 @@
     "date     =pd.DataFrame(Building_date,        columns=['date'])\n",
     "\n",
     "final=pd.concat([location, lat, lon, structure, area, height, ground, uground, date, seismic], axis=1)\n",
-    "final.to_excel('./DataProcessing_광주광역시건축물.xlsx', index=False)\n",
+    "final.to_csv('./DataProcessing_광주광역시건축물.csv', encoding='cp949', index=False)\n",
     "\n",
     "print('*** \"time :', time.time() - start, 'process 6 fin ***')\n"
    ]
@@ -308,6 +308,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": []
